--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,31 +1,129 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400);
 body {
-  background-color:#fff;
+  background-color: #fff;
   -webkit-font-smoothing: antialiased;
-  font: normal 14px Roboto,arial,sans-serif;
+  font: normal 14px Roboto, arial, sans-serif;
 }
 
 .container {
-    padding: 25px;
-    position: fixed;
+  padding: 25px;
+  position: fixed;
 }
 
 .form-login {
-  
-    padding-top: 220px;
+  padding-top: 220px;
 }
 
 h4 {
- border:0 solid #fff;
- border-bottom-width:1px;
- padding-bottom:10px;
- text-align: center;
+  border: 0 solid #fff;
+  border-bottom-width: 1px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 .form-control {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .wrapper {
-    text-align: center;
+  text-align: center;
+}
+
+
+/* Menu */
+
+.menuright {
+  min-height: 120px;
+  padding: 10px 18px 10px 10px;
+  margin-bottom: 20px;
+  /*
+  background-color: #f5f5f5;
+*/
+  border: 1px solid #5d2459;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  width: 33%;
+}
+
+.titremenu {
+  font-family: arial;
+  color: #000;
+  background-color: #00bfbf;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 19px;
+  margin-bottom: 10px;
+  border: 1px solid #5d2459;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  behavior: url(PIE/PIE.htc);
+  width: 100%;
+}
+
+#navigation {
+  width: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#navigation li {
+  color: #fff;
+  margin-bottom: 1px;
+  margin-right: 17px;
+  padding-bottom: 6px;
+  padding-right: 15px;
+  width: 100%;
+}
+
+#navigation li a {
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  border: 1px solid #000;
+  display: inline-block;
+  color: #000;
+  text-align: center;
+  font-family: arial;
+  font-size: 15px;
+  font-weight: normal;
+  text-decoration: none;
+  padding: 8px 8px 8px 5px;
+  padding-bottom: 15px;
+  width: 100%;
+  height: 1.8em;
+}
+
+
+/* Set Hover */
+
+#navigation li a:hover {
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  background-color: #5b84e1;
+}
+
+.btn-l {
+  display: inline-block;
+  overflow: auto;
+  white-space: nowrap;
+  margin: 0px auto;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+border: 1px solid transparent;
+  border-radius: 4px;
 }
