--- a/css/estilo.css
+++ b/css/estilo.css
@@ -130,3 +130,18 @@ border: 1px solid transparent;
 .textar{
   overflow-y:scroll;
 }
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 0px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
